# SemEval-2026-Task13

./: .gitignore  pyproject.toml  scorer.py
baselines/: predict.py  train.py
light_gbm/: predict.py  predict_qwen_embedding.py  train_base.py  train_qwen_embedding.py  train_with_extra_params.py
