[project]
name = "semeval-2026-task13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "datasets==4.4.1",
    "dill==0.4.0",
    "filelock==3.20.0",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.1.5",
    "idna==3.11",
    "joblib==1.5.2",
    "lightgbm==4.6.0",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "propcache==0.4.1",
    "pyarrow==22.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]
